// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManageCompanyLayout to match snapshot active 1`] = `
<body>
  <div>
    <div
      class="d-flex flex-column manage-company h-100"
    >
      <div
        class="d-flex layout-header align-items-center"
      >
        <div>
          <nav
            aria-label="breadcrumb"
          >
            <ol
              class="breadcrumb"
            >
              <li
                class="breadcrumb-item"
              >
                <a
                  href="#"
                  role="button"
                >
                  <a
                    href="/home"
                  >
                    Home
                  </a>
                </a>
              </li>
              <li
                class="breadcrumb-item"
              >
                <a
                  href="#"
                  role="button"
                >
                  <a
                    href="/companys"
                  >
                    Manage Company
                  </a>
                </a>
              </li>
            </ol>
          </nav>
          <h5 />
        </div>
        <div
          class="d-flex align-items-center justify-content-center tab-wrapper"
        />
        <div
          class="ml-auto"
        >
          <div />
        </div>
        <div
          class="error-banner d-flex align-items-center "
        >
          <div>
            <div
              class="error-heading"
            >
              OOPS!
            </div>
            <div
              class="error-reason"
            >
              Something went wrong! please try again.
            </div>
          </div>
          <div
            class="ml-auto"
          >
            <button
              class="btn btn-link"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-times fa-w-10 "
                color="#212529"
                data-icon="times"
                data-prefix="fal"
                focusable="false"
                role="img"
                style="font-size: 1.5rem;"
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="layout-content h-100 overflow-auto"
      />
    </div>
  </div>
</body>
`;

exports[`ManageCompanyLayout to match snapshot company name bread crumbs 1`] = `
<body>
  <div>
    <div
      class="d-flex flex-column manage-company h-100"
    >
      <div
        class="d-flex layout-header align-items-center"
      >
        <div>
          <nav
            aria-label="breadcrumb"
          >
            <ol
              class="breadcrumb"
            >
              <li
                class="breadcrumb-item"
              >
                <a
                  href="#"
                  role="button"
                >
                  <a
                    href="/manage-company/definitions/"
                  >
                    company Name
                  </a>
                </a>
              </li>
              <li
                class="breadcrumb-item"
              >
                <a
                  href="#"
                  role="button"
                >
                  <a
                    href="/manage-company/manage-employee-classifications/"
                  >
                    Manage Employee Classifications
                  </a>
                </a>
              </li>
              <li
                class="breadcrumb-item"
              >
                <a
                  href="#"
                  role="button"
                >
                  <a
                    href="/manage-company/employee-classification-type/"
                  >
                    Employee Classification Type
                  </a>
                </a>
              </li>
              <li
                class="breadcrumb-item"
              >
                <a
                  href="#"
                  role="button"
                >
                  <a
                    href="/manage-company/employee-classifications/"
                  >
                    Employee Classification
                  </a>
                </a>
              </li>
            </ol>
          </nav>
          <h5>
            Add Attribute
          </h5>
        </div>
        <div
          class="d-flex align-items-center justify-content-center tab-wrapper"
        />
        <div
          class="ml-auto"
        >
          <div />
        </div>
        <div
          class="error-banner d-flex align-items-center "
        >
          <div>
            <div
              class="error-heading"
            >
              OOPS!
            </div>
            <div
              class="error-reason"
            >
              Something went wrong! please try again.
            </div>
          </div>
          <div
            class="ml-auto"
          >
            <button
              class="btn btn-link"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-times fa-w-10 "
                color="#212529"
                data-icon="times"
                data-prefix="fal"
                focusable="false"
                role="img"
                style="font-size: 1.5rem;"
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="layout-content h-100 overflow-auto"
      />
      <div
        aria-atomic="true"
        aria-live="assertive"
        class="fade toast show"
        role="alert"
        style="position: fixed; bottom: 4rem; left: 6rem; z-index: 100;"
      >
        <div
          class="toast-body"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`ManageCompanyLayout to match snapshot with toast message 1`] = `
<body>
  <div>
    <div
      class="d-flex flex-column manage-company h-100"
    >
      <div
        class="d-flex layout-header align-items-center"
      >
        <div>
          <nav
            aria-label="breadcrumb"
          >
            <ol
              class="breadcrumb"
            >
              <li
                class="breadcrumb-item"
              >
                <a
                  href="#"
                  role="button"
                >
                  <a
                    href="/home"
                  >
                    Home
                  </a>
                </a>
              </li>
              <li
                class="breadcrumb-item"
              >
                <a
                  href="#"
                  role="button"
                >
                  <a
                    href="/companys"
                  >
                    Manage Company
                  </a>
                </a>
              </li>
            </ol>
          </nav>
          <h5 />
        </div>
        <div
          class="d-flex align-items-center justify-content-center tab-wrapper"
        />
        <div
          class="ml-auto"
        >
          <div />
        </div>
        <div
          class="error-banner d-flex align-items-center "
        >
          <div>
            <div
              class="error-heading"
            >
              OOPS!
            </div>
            <div
              class="error-reason"
            >
              Something went wrong! please try again.
            </div>
          </div>
          <div
            class="ml-auto"
          >
            <button
              class="btn btn-link"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-times fa-w-10 "
                color="#212529"
                data-icon="times"
                data-prefix="fal"
                focusable="false"
                role="img"
                style="font-size: 1.5rem;"
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="layout-content h-100 overflow-auto"
      />
      <div
        aria-atomic="true"
        aria-live="assertive"
        class="fade toast show"
        role="alert"
        style="position: fixed; bottom: 4rem; left: 6rem; z-index: 100;"
      >
        <div
          class="toast-body"
        >
          new compnay created
        </div>
      </div>
    </div>
  </div>
</body>
`;
